added custom style sheet and added descriptive table

--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -11,63 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<style>
-			/* Custom styles for horizontal contact section */
-			#contact-horizontal {
-				background-color: #1e2449;
-				border-bottom: solid 1px rgba(212, 212, 255, 0.1);
-				padding: 2em 0;
-			}
-			
-			#contact-horizontal .inner {
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				gap: 3em;
-				max-width: 65em;
-				margin: 0 auto;
-				width: calc(100% - 6em);
-			}
-			
-			#contact-horizontal .contact-method {
-				display: flex;
-				align-items: center;
-				gap: 0.5em;
-				color: rgba(244, 244, 255, 0.9);
-			}
-			
-			#contact-horizontal .contact-method h3 {
-				margin: 0;
-				font-size: 1em;
-				color: rgba(244, 244, 255, 0.9);
-			}
-			
-			#contact-horizontal .contact-method a {
-				color: rgba(244, 244, 255, 0.9);
-				text-decoration: none;
-			}
-			
-			#contact-horizontal .contact-method a:hover {
-				color: #9bf1ff;
-			}
-			
-			#contact-horizontal .icon {
-				font-size: 1.25em;
-			}
-			
-			@media screen and (max-width: 980px) {
-				#contact-horizontal .inner {
-					flex-direction: column;
-					gap: 1.5em;
-				}
-			}
-			
-			@media screen and (max-width: 736px) {
-				#contact-horizontal .inner {
-					width: calc(100% - 3em);
-				}
-			}
-		</style>
+		<link rel="stylesheet" href="assets/css/custom.css" />
+		
 	</head>
 	<body class="is-preload">
 
