--- a/html5up-forty/data_cleaning.html
+++ b/html5up-forty/data_cleaning.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/custom.css" />
 	</head>
 	<body class="is-preload">
 
@@ -20,7 +21,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Home</strong> <span></span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -65,7 +66,52 @@
 									<header class="major">
 										<h2>The Data Set Used</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>The Dirty Cafe Sales dataset contains 10,000 rows of synthetic data representing sales transactions in a cafe. This dataset is intentionally "dirty," with missing values, inconsistent data, and errors introduced to provide a realistic scenario for data cleaning.</p>
+									
+									<table class="dataset-table">
+										<thead>
+											<tr>
+												<th>Column Name</th>
+												<th>Description</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="Column-name">Transaction ID</td>
+												<td>A unique identifier for each transaction. Always present and unique.</td>
+											</tr>
+											<tr>
+												<td class="Column-name">Item</td>
+												<td>The name of the item purchased. May contain missing or invalid values (e.g., "ERROR").</td>
+											</tr>
+											<tr>
+												<td class="Column-name">Quantity</td>
+												<td>The quantity of the item purchased. May contain missing or invalid values.</td>
+											</tr>
+											<tr>
+												<td class="Column-name">Price Per Unit</td>
+												<td>The price of a single unit of the item. May contain missing or invalid values.</td>
+											</tr>
+											<tr>
+												<td class="Column-name">Total Spent</td>
+												<td>The total amount spent on the transaction. Calculated as Quantity * Price Per Unit.</td>
+											</tr>
+											<tr>
+												<td class="Column-name">Payment Method</td>
+												<td>The method of payment used. May contain missing or invalid values (e.g., None, "UNKNOWN").</td>
+											</tr>
+											<tr>
+												<td class="Column-name">Location</td>
+												<td>The location where the transaction occurred. May contain missing or invalid values.</td>
+											</tr>
+											<tr>
+												<td class="Column-name">Transaction Date</td>
+												<td>The date of the transaction. May contain missing or incorrect values.</td>
+											</tr>
+										</tbody>
+
+									</table>
+									<a href="https://www.kaggle.com/datasets/ahmedmohamed2003/cafe-sales-dirty-data-for-cleaning-training" class="button">View Here</a>
 								</div>
 							</section>
 
