Start adding EDA project

--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -48,10 +48,13 @@
 								<h1>Jevin Wilson</h1>
 							</header>
 							<div class="content">
-								<p>Computer Engineer major interested in Data Analytics,<br />
+								<p>Computer Engineering major interested in Data Analytics,<br />
 								with experience using Python, SQL, and Excel</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">View Projects</a></li>
+								</ul>
+								<ul class="actions">
+									<a href="#one" class="button next scrolly">View Resume</a>
 								</ul>
 							</div>
 						</div>
@@ -89,7 +92,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="data_cleaning.html" class="link">Data Cleaning</a></h3>
-										<p>SQL, Python, and Excel</p>
+										<p>SQL</p>
 									</header>
 								</article>
 								<article>
@@ -97,8 +100,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Exploritory Data Analysis</a></h3>
-										<p>SQL, </p>
+										<h3><a href="EDA_sql.html" class="link">Exploritory Data Analysis</a></h3>
+										<p>SQL</p>
 									</header>
 								</article>
 								<article>
