--- a/html5up-forty/data_cleaning.html
+++ b/html5up-forty/data_cleaning.html
@@ -67,7 +67,11 @@
 										<h2>The Data Set Used</h2> 
 										<a href="https://www.kaggle.com/datasets/ahmedmohamed2003/cafe-sales-dirty-data-for-cleaning-training" class="button">View Here</a>
 									</header>
-									<p>The Dirty Cafe Sales dataset contains 10,000 rows of synthetic data representing sales transactions in a cafe. This dataset is intentionally "dirty," with missing values, inconsistent data, and errors introduced to provide a realistic scenario for data cleaning.</p>
+									<p>The Dirty Cafe Sales dataset contains 10,000 rows of synthetic data representing sales 
+										transactions in a cafe. This dataset is intentionally "dirty," with missing values, 
+										inconsistent data, and errors introduced to provide a realistic scenario for data 
+										cleaning.
+									</p>
 									
 									<table class="dataset-table">
 										<thead>
