added table to EDA

--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -48,7 +48,7 @@
 								<h1>Jevin Wilson</h1>
 							</header>
 							<div class="content">
-								<p>Computer Engineering major interested in Data Analytics,<br />
+								<p>Computer Engineering graduate interested in Data Analytics,<br />
 								with experience using Python, SQL, and Excel</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">View Projects</a></li>
