--- a/html5up-forty/data_cleaning.html
+++ b/html5up-forty/data_cleaning.html
@@ -52,7 +52,8 @@
 								<h1>Data Cleaning</h1>
 							</header>
 							<div class="content">
-								<p>Data cleaning using SQL, Python, and Excel<br /></p>
+								<p>July 10, 2025</p>
+								<p>Data cleaning using SQL, Python, and Excel</p>
 							</div>
 						</div>
 					</section>
