--- a/html5up-forty/EDA_sql.html
+++ b/html5up-forty/EDA_sql.html
@@ -31,9 +31,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="resume.html">Resume</a></li>
+							<li><a href="index.html#one">Projects</a></li>
 						</ul>
 					</nav>
 
