--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -45,12 +45,12 @@
 							</header>
 							<div class="content">
 								<p>Computer Engineering graduate interested in Data Analytics,<br />
-								with experience using Python, SQL, and Excel</p>
+								with experience using Python, SQL, and Excel (more projects to come)</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">View Projects</a></li>
 								</ul>
 								<ul class="actions">
-									<a href="#one" class="button next scrolly">View Resume</a>
+									<a href="resume.html" class="button next scrolly">View Resume</a>
 								</ul>
 							</div>
 						</div>
@@ -91,6 +91,7 @@
 										<p>SQL</p>
 									</header>
 								</article>
+
 								<article>
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
@@ -100,6 +101,7 @@
 										<p>SQL</p>
 									</header>
 								</article>
+								<!-- save for more projects 
 								<article>
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
@@ -109,6 +111,7 @@
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
+
 								<article>
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
@@ -118,6 +121,7 @@
 										<p>Ornare nulla proin odio consequat</p>
 									</header>
 								</article>
+
 								<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
@@ -127,6 +131,7 @@
 										<p>Ornare nulla proin odio consequat sapien vestibulum ipsum</p>
 									</header>
 								</article>
+
 								<article>
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
@@ -136,21 +141,8 @@
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
+								-->
 							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
-							</section>
-
 					</div>
 
 				<!-- Footer -->
