added dates to projects on index.html

--- a/JevinsPortfolio/index.html
+++ b/JevinsPortfolio/index.html
@@ -88,7 +88,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="data_cleaning.html" class="link">Data Cleaning</a></h3>
-										<p>SQL</p>
+										<p>july 2025: SQL</p>
 									</header>
 								</article>
 
@@ -98,7 +98,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="EDA_sql.html" class="link">Exploritory Data Analysis</a></h3>
-										<p>SQL</p>
+										<p>July 2025: SQL</p>
 									</header>
 								</article>
 								<!-- save for more projects 
