Added AI/ML salaries project

--- a/JevinsPortfolio/index.html
+++ b/JevinsPortfolio/index.html
@@ -101,27 +101,27 @@
 										<p>July 2025: SQL</p>
 									</header>
 								</article>
-								<!-- save for more projects 
+								 
 								<article>
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="AI_ML_salaries.html" class="link">AI/ML Salary Market Analysis</a></h3>
+										<p>August 2025: Excel</p>
 									</header>
 								</article>
-
+								
 								<article>
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Sed etiam facilis</a></h3>
-										<p>Ornare nulla proin odio consequat</p>
+										<h3>Coming Soon</h3>
+										<p></p>
 									</header>
 								</article>
-
+								<!-- save for more projects
 								<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
