fixed header3 for mobile (maybe)

--- a/JevinsPortfolio/AI_ML_salaries.html
+++ b/JevinsPortfolio/AI_ML_salaries.html
@@ -216,7 +216,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>How have AI/ML salaries evolved over time and which roles are<br> growing fastest?</h3>
+												<h3>How have AI/ML salaries evolved over time and which roles are growing fastest?</h3>
 											</header>
 											<p>
 												<strong>AI/ML Salaries Surged 48% But Hit a Ceiling in 2025</strong><br>
